# api-sep

./: .gitignore  README.md  main.py  ola.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml
app/: data.py  main.py  schema.py
tests/: tests.py
