[tool.poetry]
name = "api-sep"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
taskipy = "^1.13.0"
pytest = "^8.3.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
run = "uvicorn main:app --reload"
test = "pytest -v test.py"
kill = "kill -9 $(lsof -t -i:8000)"